--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             z-index: 1000;
             box-shadow: 0 4px 30px rgba(0, 0, 0, 0.5);
             border-bottom: 2px solid rgba(52, 152, 219, 0.3);
+            text-align: center;
         }
 
         nav a {
@@ -706,5 +707,3 @@
     </script>
 </body>
 </html>
-
-
