--- a/index.html
+++ b/index.html
@@ -276,6 +276,188 @@
             margin-left: 25px;
         }
 
+        /* Statistics Counter Section */
+        .stats-section {
+            max-width: 1200px;
+            margin: 60px auto;
+            padding: 60px 40px;
+            background: rgba(26, 31, 58, 0.75);
+            backdrop-filter: blur(10px);
+            border-radius: 20px;
+            border: 1px solid rgba(52, 152, 219, 0.3);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.4);
+        }
+
+        .stats-title {
+            text-align: center;
+            font-size: 2.5rem;
+            color: #3498db;
+            margin-bottom: 50px;
+            position: relative;
+            padding-bottom: 20px;
+        }
+
+        .stats-title::after {
+            content: '';
+            position: absolute;
+            bottom: 0;
+            left: 50%;
+            transform: translateX(-50%);
+            width: 100px;
+            height: 4px;
+            background: linear-gradient(90deg, #3498db, #8e44ad);
+            border-radius: 2px;
+        }
+
+        .stats-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 25px;
+        }
+
+        .stat-card {
+            background: linear-gradient(135deg, rgba(52, 152, 219, 0.1), rgba(142, 68, 173, 0.1));
+            padding: 40px 20px;
+            border-radius: 15px;
+            text-align: center;
+            border: 2px solid transparent;
+            transition: all 0.3s;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .stat-card::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: -100%;
+            width: 100%;
+            height: 100%;
+            background: linear-gradient(90deg, transparent, rgba(255, 255, 255, 0.1), transparent);
+            transition: left 0.5s;
+        }
+
+        .stat-card:hover::before {
+            left: 100%;
+        }
+
+        .stat-card:hover {
+            transform: translateY(-10px);
+            border-color: #3498db;
+            box-shadow: 0 10px 30px rgba(52, 152, 219, 0.4);
+        }
+
+        .stat-icon {
+            font-size: 3rem;
+            margin-bottom: 20px;
+            display: block;
+            animation: bounce 2s infinite;
+        }
+
+        @keyframes bounce {
+            0%, 100% { transform: translateY(0); }
+            50% { transform: translateY(-10px); }
+        }
+
+        .stat-number {
+            font-size: 3.5rem;
+            font-weight: bold;
+            color: #3498db;
+            margin-bottom: 10px;
+            text-shadow: 0 0 20px rgba(52, 152, 219, 0.5);
+        }
+
+        .stat-label {
+            font-size: 1.1rem;
+            color: #95a5a6;
+            text-transform: uppercase;
+            letter-spacing: 2px;
+        }
+
+        .stat-card:nth-child(1) {
+            background: linear-gradient(135deg, rgba(231, 76, 60, 0.1), rgba(192, 57, 43, 0.1));
+        }
+
+        .stat-card:nth-child(1) .stat-number {
+            color: #e74c3c;
+            text-shadow: 0 0 20px rgba(231, 76, 60, 0.5);
+        }
+
+        .stat-card:nth-child(1):hover {
+            border-color: #e74c3c;
+            box-shadow: 0 10px 30px rgba(231, 76, 60, 0.4);
+        }
+
+        .stat-card:nth-child(2) {
+            background: linear-gradient(135deg, rgba(46, 204, 113, 0.1), rgba(39, 174, 96, 0.1));
+        }
+
+        .stat-card:nth-child(2) .stat-number {
+            color: #2ecc71;
+            text-shadow: 0 0 20px rgba(46, 204, 113, 0.5);
+        }
+
+        .stat-card:nth-child(2):hover {
+            border-color: #2ecc71;
+            box-shadow: 0 10px 30px rgba(46, 204, 113, 0.4);
+        }
+
+        .stat-card:nth-child(3) {
+            background: linear-gradient(135deg, rgba(243, 156, 18, 0.1), rgba(230, 126, 34, 0.1));
+        }
+
+        .stat-card:nth-child(3) .stat-number {
+            color: #f39c12;
+            text-shadow: 0 0 20px rgba(243, 156, 18, 0.5);
+        }
+
+        .stat-card:nth-child(3):hover {
+            border-color: #f39c12;
+            box-shadow: 0 10px 30px rgba(243, 156, 18, 0.4);
+        }
+
+        .stat-card:nth-child(4) {
+            background: linear-gradient(135deg, rgba(155, 89, 182, 0.1), rgba(142, 68, 173, 0.1));
+        }
+
+        .stat-card:nth-child(4) .stat-number {
+            color: #9b59b6;
+            text-shadow: 0 0 20px rgba(155, 89, 182, 0.5);
+        }
+
+        .stat-card:nth-child(4):hover {
+            border-color: #9b59b6;
+            box-shadow: 0 10px 30px rgba(155, 89, 182, 0.4);
+        }
+
+        .stat-card:nth-child(5) {
+            background: linear-gradient(135deg, rgba(52, 152, 219, 0.1), rgba(41, 128, 185, 0.1));
+        }
+
+        .stat-card:nth-child(5) .stat-number {
+            color: #3498db;
+            text-shadow: 0 0 20px rgba(52, 152, 219, 0.5);
+        }
+
+        .stat-card:nth-child(5):hover {
+            border-color: #3498db;
+            box-shadow: 0 10px 30px rgba(52, 152, 219, 0.4);
+        }
+
+        .stat-card:nth-child(6) {
+            background: linear-gradient(135deg, rgba(231, 76, 60, 0.1), rgba(192, 57, 43, 0.1));
+        }
+
+        .stat-card:nth-child(6) .stat-number {
+            color: #e74c3c;
+            text-shadow: 0 0 20px rgba(231, 76, 60, 0.5);
+        }
+
+        .stat-card:nth-child(6):hover {
+            border-color: #e74c3c;
+            box-shadow: 0 10px 30px rgba(231, 76, 60, 0.4);
+        }
+
         /* Certificates Grid */
         .certificates {
             display: grid;
@@ -681,7 +863,7 @@
     </section>
 
     <section id="skills">
-        <h2> Skills</h2>
+        <h2>Technical Skills</h2>
 
         <div class="skill-item">
             <div class="skill-header">
@@ -753,6 +935,49 @@
             <div class="skill-description">Network traffic analysis, protocol analysis, troubleshooting</div>
         </div>
     </section>
+
+    <!-- Statistics Counter Section -->
+    <div class="stats-section">
+        <h2 class="stats-title">📊 My Cybersecurity Journey</h2>
+
+        <div class="stats-grid">
+            <div class="stat-card">
+                <span class="stat-icon">🎓</span>
+                <div class="stat-number" data-target="14">0</div>
+                <div class="stat-label">Certifications</div>
+            </div>
+
+            <div class="stat-card">
+                <span class="stat-icon">🛡️</span>
+                <div class="stat-number" data-target="2000">0</div>
+                <div class="stat-label">LetsDefend Points</div>
+            </div>
+
+            <div class="stat-card">
+                <span class="stat-icon">✅</span>
+                <div class="stat-number" data-target="83">0<span style="font-size: 2rem;">%</span></div>
+                <div class="stat-label">LetsDefend Success</div>
+            </div>
+
+            <div class="stat-card">
+                <span class="stat-icon">⭐</span>
+                <div class="stat-number">Top 5<span style="font-size: 2rem;">%</span></div>
+                <div class="stat-label">TryHackMe Rank</div>
+            </div>
+
+            <div class="stat-card">
+                <span class="stat-icon">🏠</span>
+                <div class="stat-number" data-target="100">0<span style="font-size: 2rem;">+</span></div>
+                <div class="stat-label">TryHackMe Rooms</div>
+            </div>
+
+            <div class="stat-card">
+                <span class="stat-icon">🚩</span>
+                <div class="stat-number" data-target="15">0<span style="font-size: 2rem;">+</span></div>
+                <div class="stat-label">PicoCTF Solves</div>
+            </div>
+        </div>
+    </div>
 
     <section id="certs">
         <h2>Certifications</h2>
@@ -986,6 +1211,58 @@
         initParticles();
         animateParticles();
 
+        // Statistics Counter Animation
+        let hasAnimatedStats = false;
+
+        function animateCounter(element, target, duration = 2000) {
+            const start = 0;
+            const increment = target / (duration / 16);
+            let current = start;
+
+            const timer = setInterval(() => {
+                current += increment;
+                if (current >= target) {
+                    element.textContent = target.toLocaleString();
+                    if (element.dataset.target === "83") {
+                        element.innerHTML = target + '<span style="font-size: 2rem;">%</span>';
+                    } else if (element.dataset.target === "100" || element.dataset.target === "15") {
+                        element.innerHTML = target + '<span style="font-size: 2rem;">+</span>';
+                    }
+                    clearInterval(timer);
+                } else {
+                    element.textContent = Math.floor(current).toLocaleString();
+                    if (element.dataset.target === "83") {
+                        element.innerHTML = Math.floor(current) + '<span style="font-size: 2rem;">%</span>';
+                    } else if (element.dataset.target === "100" || element.dataset.target === "15") {
+                        element.innerHTML = Math.floor(current) + '<span style="font-size: 2rem;">+</span>';
+                    }
+                }
+            }, 16);
+        }
+
+        function startCounters() {
+            const counters = document.querySelectorAll('.stat-number[data-target]');
+            counters.forEach(counter => {
+                const target = parseInt(counter.getAttribute('data-target'));
+                animateCounter(counter, target);
+            });
+            hasAnimatedStats = true;
+        }
+
+        // Intersection Observer for scroll-triggered animation
+        const statsObserver = new IntersectionObserver((entries) => {
+            entries.forEach(entry => {
+                if (entry.isIntersecting && !hasAnimatedStats) {
+                    startCounters();
+                }
+            });
+        }, { threshold: 0.3 });
+
+        const statsSection = document.querySelector('.stats-section');
+        if (statsSection) {
+            statsObserver.observe(statsSection);
+        }
+
         // Typing Animation for Name
         const fullText = "MD. ABIDUL ISLAM";
         let currentIndex = 0;
@@ -1086,5 +1363,3 @@
     </script>
 </body>
 </html>
-
-
