--- a/index.html
+++ b/index.html
@@ -863,7 +863,7 @@
     </section>
 
     <section id="skills">
-        <h2>Technical Skills</h2>
+        <h2> Skills</h2>
 
         <div class="skill-item">
             <div class="skill-header">
@@ -1363,3 +1363,4 @@
     </script>
 </body>
 </html>
+
