--- a/index.html
+++ b/index.html
@@ -1055,7 +1055,7 @@
     </section>
 
     <section id="skills">
-        <h2>Technical Skills</h2>
+        <h2> Skills</h2>
 
         <div class="skill-item">
             <div class="skill-header">
@@ -1585,3 +1585,4 @@
     </script>
 </body>
 </html>
+
