--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,7 @@
             <p><strong>⭐ Ranked in the Top 5% on TryHackMe</strong></p>
         </div>
         <div class="experience-item">
-            <p><strong>🛡️ Active on LetsDefend – 2000+ Points | 83% Success Rate</strong></p>
+            <p><strong>🛡️ 5th position on the Bangladesh 🇧🇩 leaderboard</strong></p>
         </div>
     </section>
 
@@ -1585,5 +1585,6 @@
     </script>
 </body>
 </html>
+
 
 
