--- a/index.html
+++ b/index.html
@@ -1050,7 +1050,10 @@
             <p><strong>⭐ Ranked in the Top 5% on TryHackMe</strong></p>
         </div>
         <div class="experience-item">
-            <p><strong>🛡️ 5th position on the Bangladesh 🇧🇩 leaderboard</strong></p>
+            <p><strong><p><strong>🛡️ 5th position on the Bangladesh 
+<img src="https://upload.wikimedia.org/wikipedia/commons/f/f9/Flag_of_Bangladesh.svg" alt="Bangladesh Flag" style="width:20px; height:20px; vertical-align:middle; border-radius:2px;"> 
+leaderboard</strong></p>
+</strong></p>
         </div>
     </section>
 
@@ -1585,6 +1588,7 @@
     </script>
 </body>
 </html>
+
 
 
 
