--- a/index.html
+++ b/index.html
@@ -1144,13 +1144,13 @@ leaderboard</strong></p>
 
             <div class="stat-card">
                 <span class="stat-icon">🛡️</span>
-                <div class="stat-number" data-target="2000">0</div>
+                <div class="stat-number" data-target="4700+">0</div>
                 <div class="stat-label">LetsDefend Points</div>
             </div>
 
             <div class="stat-card">
                 <span class="stat-icon">✅</span>
-                <div class="stat-number" data-target="83">0<span style="font-size: 2rem;">%</span></div>
+                <div class="stat-number" data-target="95">0<span style="font-size: 2rem;">%</span></div>
                 <div class="stat-label">LetsDefend Success</div>
             </div>
 
@@ -1162,7 +1162,7 @@ leaderboard</strong></p>
 
             <div class="stat-card">
                 <span class="stat-icon">🏠</span>
-                <div class="stat-number" data-target="100">0<span style="font-size: 2rem;">+</span></div>
+                <div class="stat-number" data-target="120">0<span style="font-size: 2rem;">+</span></div>
                 <div class="stat-label">TryHackMe Rooms</div>
             </div>
 
@@ -1588,6 +1588,7 @@ leaderboard</strong></p>
     </script>
 </body>
 </html>
+
 
 
 
