--- a/index.html
+++ b/index.html
@@ -975,8 +975,7 @@
 
     <header>
         <div class="profile-container">
-            <div class="profile-pic">👨‍💻</div>
-            <h1><span class="typing-text" id="typingText"></span></h1>
+<img src="profile.jpg" alt="MD. ABIDUL ISLAM" class="profile-pic" style="object-fit: cover;" />            <h1><span class="typing-text" id="typingText"></span></h1>
             <p class="subtitle">🔒 Cybersecurity Enthusiast • 🌐 Aspiring Network Professional • 🎓 Student</p>
             <p class="info-text">B.Sc. in CSE – American International University–Bangladesh (AIUB)</p>
             <p class="info-text">📧 abidjihan1123@gmail.com</p>
@@ -1588,6 +1587,7 @@ leaderboard</strong></p>
     </script>
 </body>
 </html>
+
 
 
 
