--- a/index.html
+++ b/index.html
@@ -153,6 +153,7 @@
             margin-bottom: 15px;
             text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
             min-height: 60px;
+             color: green; /* <-- Add this line */
         }
 
         .typing-text {
@@ -1631,6 +1632,7 @@ leaderboard in Let's Defend</strong></p>
     </script>
 </body>
 </html>
+
 
 
 
