--- a/index.html
+++ b/index.html
@@ -1015,7 +1015,10 @@
         <li>Certified Threat Intelligence & Governance Analyst (CTIGA) – RED TEAM LEADERS</li>
         <li>Certified Phishing Prevention Specialist (CPPS) – Hack & Fix</li>
         <li>CRPO (Certified Ransomware Protection Officer) – EU Cyber Academy</li>
-        <li>ISO/IEC 42001:2023 – Lead Auditor</li>
+        <li>ISO/IEC 42001:2023 Lead Auditor - Mastermind </li>
+        <li>ISO/IEC 27001:2022 Lead Auditor - Mastermind</li>
+        
+        
     </div>
 </ol>
 
@@ -1632,6 +1635,7 @@ leaderboard in Let's Defend</strong></p>
     </script>
 </body>
 </html>
+
 
 
 
