--- a/index.html
+++ b/index.html
@@ -1152,24 +1152,24 @@
         </p>
         <h3>Course Completion</h3>
 <ol style="line-height:1.8; font-size:1.05rem;">
-    <li>CCNA – Cisco Certified Network Associate</li>
-    <li>CCNP – Cisco Certified Network Professional</li>
-    <li>DevNet – Cisco DevNet Associate</li>
-    <li>CyberOps Associate – Cisco CyberOps</li>
+    <li> Cisco Certified Network Associate - CCNA </li>
+    <li> Cisco Certified Network Professional - CCNP</li>
+    <li> Cisco DevNet Associate - DevNet </li>
+    <li>CyberOps Associate –  CyberOps</li>
     <li>Introduction to Cybersecurity – Cisco</li>
     <li>Junior Cybersecurity Analyst – Cisco</li>
     <li>Ethical Hacker – Cisco</li>
     <li>Cyber Threat Management – Cisco</li>
     <li>Industrial Cybersecurity Essentials (2025) – Cisco</li>
     <li>Industrial Networking Essentials (2025) – Cisco</li>
-    <li> Certified Cybersecurity Educator Professional CCEP – RED TEAM LEADERS </li>
+    <li> Certified Cybersecurity Educator Professional (CCEP) – RED TEAM LEADERS </li>
     
     <!-- Hidden courses (initially) -->
     <div id="moreCourses" style="display: none;">
         <li>Certified Red Team Operations Management (CRTOM) – RED TEAM LEADERS</li>
         <li>Certified Threat Intelligence & Governance Analyst (CTIGA) – RED TEAM LEADERS</li>
         <li>Certified Phishing Prevention Specialist (CPPS) – Hack & Fix</li>
-        <li>CRPO (Certified Ransomware Protection Officer) – EU Cyber Academy</li>
+        <li>Certified Ransomware Protection Officer(CRPO) – EU Cyber Academy</li>
         <li>ISO/IEC 42001:2023 Lead Auditor - Mastermind </li>
         <li>ISO/IEC 27001:2022 Lead Auditor - Mastermind</li>
         
@@ -1887,6 +1887,7 @@ leaderboard in Let's Defend</strong></p>
     </script>
 </body>
 </html>
+
 
 
 
