--- a/index.html
+++ b/index.html
@@ -637,7 +637,42 @@
                 height: 50px;
                 font-size: 1.5rem;
             }
-        }
+        }/* Back to Top Button */
+.back-to-top {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    width: 50px;
+    height: 50px;
+    background: linear-gradient(135deg, #3498db, #2980b9);
+    color: white;
+    border: none;
+    border-radius: 50%;
+    font-size: 1.5rem;
+    cursor: pointer;
+    box-shadow: 0 4px 15px rgba(52, 152, 219, 0.4);
+    transition: all 0.3s;
+    z-index: 1000;
+    opacity: 0;
+    visibility: hidden;
+}
+
+.back-to-top.show {
+    opacity: 1;
+    visibility: visible;
+}
+
+.back-to-top:hover {
+    transform: translateY(-5px) scale(1.1);
+    box-shadow: 0 8px 25px rgba(52, 152, 219, 0.6);
+}
+
+.back-to-top:active {
+    transform: translateY(-2px);
+}
+
+/* Responsive */
+@media (max-width: 768px) {
 
         @media (max-width: 768px) {
             /* Hide floating sidebar on mobile */
@@ -1870,7 +1905,37 @@ leaderboard in Let's Defend</strong></p>
                 modal.style.display = 'flex';
                 modalImg.src = profilePic.src;
             });
+        }function toggleCourses() {
+            const moreCourses = document.getElementById('moreCourses');
+            const btn = document.getElementById('seeMoreBtn');
+            
+            if (moreCourses.style.display === 'none') {
+                moreCourses.style.display = 'block';
+                btn.textContent = 'See Less';
+            } else {
+                moreCourses.style.display = 'none';
+                btn.textContent = 'See More';
+            }
         }
+
+        // Back to Top Button
+        const backToTopBtn = document.getElementById('backToTop');
+
+        window.addEventListener('scroll', () => {
+            if (window.pageYOffset > 300) {
+                backToTopBtn.classList.add('show');
+            } else {
+                backToTopBtn.classList.remove('show');
+            }
+        });
+
+        backToTopBtn.addEventListener('click', () => {
+            window.scrollTo({
+                top: 0,
+                behavior: 'smooth'
+            });
+        });
+    </script>
          // Toggle course visibility
         function toggleCourses() {
             const moreCourses = document.getElementById('moreCourses');
@@ -1883,12 +1948,16 @@ leaderboard in Let's Defend</strong></p>
                 moreCourses.style.display = 'none';
                 btn.textContent = 'See More';
             }
-        }
+    }
     </script>
+
+    <!-- Back to Top Button -->
+    <button id="backToTop" class="back-to-top" title="Go to top">
+        ↑
+    </button>
+
 </body>
 </html>
-
-
 
 
 
