--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MD. ABIDUL ISLAM - Cybersecurity Portfolio</title>
+     <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-XGEP8NXGLV"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+      gtag('config', 'G-XGEP8NXGLV');
+    </script>
     <style>
         * {
             margin: 0;
@@ -1887,6 +1895,7 @@ leaderboard in Let's Defend</strong></p>
     </script>
 </body>
 </html>
+
 
 
 
