--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@
             animation: fadeIn 1s forwards;
             animation-delay: 1s;
             text-shadow: 0 0 5px #0f0;
+            overflow-x: auto;
         }
 
         /* Enter Button */
@@ -227,7 +228,7 @@
             }
 
             .ascii-art {
-                font-size: 0.5rem;
+                font-size: 0.4rem;
             }
 
             .enter-btn {
@@ -282,7 +283,7 @@
 
             <div class="enter-button">
                 <button class="enter-btn" onclick="enterPortfolio()">
-                    <span class="glitch">[ ENTER ]</span>
+                    <span class="glitch">[ SEE MORE ]</span>
                 </button>
             </div>
         </div>
