--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             text-transform: uppercase;
             letter-spacing: 3px;
             position: relative;
-            overflow: hidden;
+            overflow: auto;
         }
 
         .enter-btn::before {
@@ -225,6 +225,8 @@
 
             .terminal-line {
                 font-size: 0.9rem;
+                 white-space: normal;
+                  word-break: break-word;
             }
 
             .ascii-art {
