--- a/index.html
+++ b/index.html
@@ -227,6 +227,10 @@
                 font-size: 0.9rem;
                  white-space: normal;
                   word-break: break-word;
+                  padding-right: 6px; 
+            }
+            .terminal-content {
+                padding-right: 6px;
             }
 
             .ascii-art {
