--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
 
             <div class="enter-button">
                 <button class="enter-btn" onclick="enterPortfolio()">
-                    <span class="glitch">[ ENTER ]</span>
+                    <span class="glitch">[ SEE MORE ]</span>
                 </button>
             </div>
         </div>
