--- a/portfolio.html
+++ b/portfolio.html
@@ -705,7 +705,7 @@ section.scroll-visible {
             transition: all 0.3s;
         }
 
-        .cert-label {
+       .cert-label {
     color: #5dade2;
     font-size: 0.85rem;
     margin-bottom: 8px;
@@ -713,48 +713,18 @@ section.scroll-visible {
     letter-spacing: 1px;
 }
 
-/* ========== ADD THIS ENTIRE BLOCK HERE ========== */
-
-/* Faster animation specifically for certificates section */
+/* ADD THIS NEW CODE HERE ⬇️ */
+/* Disable animation for certificates section */
 #certs {
-    transition: opacity 0.3s ease-out, transform 0.3s ease-out, box-shadow 0.3s, border-color 0.3s !important;
-    transform: translateY(20px);
+    opacity: 1 !important;
+    transform: none !important;
+    transition: box-shadow 0.3s, border-color 0.3s !important;
 }
 
-#certs.scroll-visible {
-    opacity: 1;
-    transform: translateY(0);
+#certs .cert-card {
+    opacity: 1 !important;
+    transform: none !important;
 }
-
-/* Also make certificate cards load faster */
-.cert-card {
-    opacity: 0;
-    transform: translateY(20px);
-    transition: opacity 0.25s ease-out, transform 0.25s ease-out, box-shadow 0.3s, border-color 0.3s;
-}
-
-#certs.scroll-visible .cert-card {
-    opacity: 1;
-    transform: translateY(0);
-}
-
-/* Stagger the certificate cards for a cool effect */
-#certs.scroll-visible .cert-card:nth-child(1) { transition-delay: 0.05s; }
-#certs.scroll-visible .cert-card:nth-child(2) { transition-delay: 0.1s; }
-#certs.scroll-visible .cert-card:nth-child(3) { transition-delay: 0.15s; }
-#certs.scroll-visible .cert-card:nth-child(4) { transition-delay: 0.2s; }
-#certs.scroll-visible .cert-card:nth-child(5) { transition-delay: 0.25s; }
-#certs.scroll-visible .cert-card:nth-child(6) { transition-delay: 0.3s; }
-#certs.scroll-visible .cert-card:nth-child(7) { transition-delay: 0.35s; }
-#certs.scroll-visible .cert-card:nth-child(8) { transition-delay: 0.4s; }
-#certs.scroll-visible .cert-card:nth-child(9) { transition-delay: 0.45s; }
-#certs.scroll-visible .cert-card:nth-child(10) { transition-delay: 0.5s; }
-#certs.scroll-visible .cert-card:nth-child(11) { transition-delay: 0.55s; }
-#certs.scroll-visible .cert-card:nth-child(12) { transition-delay: 0.6s; }
-#certs.scroll-visible .cert-card:nth-child(13) { transition-delay: 0.65s; }
-#certs.scroll-visible .cert-card:nth-child(14) { transition-delay: 0.7s; }
-
-/* ========== END OF NEW CODE ========== */
 
 /* Skills Progress Bars */
 .skill-item {
@@ -2038,6 +2008,7 @@ handleScrollAnimation();
     </script>
 </body>
 </html>
+
 
 
 
