--- a/portfolio.html
+++ b/portfolio.html
@@ -1616,6 +1616,7 @@ leaderboard in Let's Defend</strong></p>
 
     <footer>
         <p>© 2025 MD. ABIDUL ISLAM | Cybersecurity Portfolio</p>
+        <p> Designed and developed by Abidul Islam</p>
     </footer>
 
     <div class="modal" id="certModal">
@@ -2009,6 +2010,7 @@ handleScrollAnimation();
     </script>
 </body>
 </html>
+
 
 
 
